<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".DailySelfieActivity">

    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_action_camera"
        android:title="@string/action_camera"
        android:orderInCategory="100"
        android:showAsAction="always" />

    <item
        android:id="@+id/action_delete_selected"
        android:title="@string/action_delete_selected"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all"
        android:title="@string/action_delete_all"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_start_alarm"
        android:title="@string/action_start_alarm"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_cancel_alarm"
        android:title="@string/action_cancel_alarm"
        android:orderInCategory="100"
        android:showAsAction="never" />


</menu>
